--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/screenshot": "^4.2.1",
+        "@ionic-native/social-sharing": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/sqlite": "^4.2.1",
         "@ionic-native/status-bar": "3.12.1",
+        "@ionic-native/toast": "^4.2.1",
         "@ionic/storage": "2.0.1",
+        "com.darktalker.cordova.screenshot": "^0.1.6",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-plugin-console": "^1.0.5",
@@ -32,7 +36,10 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-x-socialsharing": "^5.2.0",
+        "cordova-plugin-x-toast": "^2.6.0",
         "cordova-sqlite-storage": "^2.0.4",
+        "es6-promise-plugin": "^4.1.0",
         "ionic-angular": "3.6.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -53,7 +60,10 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-x-socialsharing": {},
+            "com.darktalker.cordova.screenshot": {},
+            "cordova-plugin-x-toast": {}
         },
         "platforms": [
             "android",
