--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/native-page-transitions": "^4.3.1",
         "@ionic-native/screenshot": "^4.2.1",
         "@ionic-native/social-sharing": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
@@ -29,6 +30,7 @@
         "@ionic-native/toast": "^4.2.1",
         "@ionic/storage": "2.0.1",
         "com.darktalker.cordova.screenshot": "^0.1.6",
+        "com.telerik.plugins.nativepagetransitions": "^0.6.5",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-plugin-console": "^1.0.5",
@@ -48,6 +50,7 @@
         "zone.js": "0.8.12"
     },
     "devDependencies": {
+        "@angular/cli": "^1.4.5",
         "@ionic/app-scripts": "2.1.4",
         "typescript": "2.3.4"
     },
@@ -63,7 +66,8 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-x-socialsharing": {},
             "com.darktalker.cordova.screenshot": {},
-            "cordova-plugin-x-toast": {}
+            "cordova-plugin-x-toast": {},
+            "com.telerik.plugins.nativepagetransitions": {}
         },
         "platforms": [
             "android",
