--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic-native/toast": "^4.2.1",
         "@ionic/storage": "2.0.1",
+        "@ngx-translate/core": "6.0.1",
+        "@ngx-translate/http-loader": "0.0.3",
         "com.darktalker.cordova.screenshot": "^0.1.6",
         "com.telerik.plugins.nativepagetransitions": "^0.6.5",
         "cordova-android": "^6.2.3",
