--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/app-rate": "^4.3.2",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/native-page-transitions": "^4.3.1",
         "@ionic-native/screenshot": "^4.2.1",
@@ -35,7 +36,11 @@
         "com.telerik.plugins.nativepagetransitions": "^0.6.5",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
+        "cordova-plugin-apprate": "^1.3.0",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-dialogs": "^1.3.3",
+        "cordova-plugin-globalization": "^1.0.7",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -67,7 +72,8 @@
             "cordova-plugin-x-socialsharing": {},
             "com.darktalker.cordova.screenshot": {},
             "cordova-plugin-x-toast": {},
-            "com.telerik.plugins.nativepagetransitions": {}
+            "com.telerik.plugins.nativepagetransitions": {},
+            "cordova-plugin-apprate": {}
         },
         "platforms": [
             "android",
