--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/app-rate": "^4.3.2",
         "@ionic-native/core": "3.12.1",
-        "@ionic-native/native-page-transitions": "^4.3.1",
         "@ionic-native/screenshot": "^4.2.1",
         "@ionic-native/social-sharing": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
@@ -33,7 +32,6 @@
         "@ngx-translate/core": "6.0.1",
         "@ngx-translate/http-loader": "0.0.3",
         "com.darktalker.cordova.screenshot": "^0.1.6",
-        "com.telerik.plugins.nativepagetransitions": "^0.6.5",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-plugin-apprate": "^1.3.0",
@@ -48,7 +46,7 @@
         "cordova-plugin-x-toast": "^2.6.0",
         "cordova-sqlite-storage": "^2.0.4",
         "es6-promise-plugin": "^4.1.0",
-        "ionic-angular": "3.6.1",
+        "ionic-angular": "^3.8.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
@@ -72,7 +70,6 @@
             "cordova-plugin-x-socialsharing": {},
             "com.darktalker.cordova.screenshot": {},
             "cordova-plugin-x-toast": {},
-            "com.telerik.plugins.nativepagetransitions": {},
             "cordova-plugin-apprate": {}
         },
         "platforms": [
