--- a/package.json
+++ b/package.json
@@ -1,80 +1,80 @@
 {
-    "name": "tutorialTemplate",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "tutorialTemplate",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/app-rate": "^4.5.2",
+    "@ionic-native/core": "^4.2.0",
+    "@ionic-native/screenshot": "^4.5.2",
+    "@ionic-native/social-sharing": "^4.5.2",
+    "@ionic-native/splash-screen": "^3.14.0",
+    "@ionic-native/sqlite": "^4.5.2",
+    "@ionic-native/status-bar": "^3.14.0",
+    "@ionic-native/toast": "^4.5.2",
+    "@ionic/storage": "2.0.1",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
+    "com.darktalker.cordova.screenshot": "^0.1.6",
+    "cordova-android": "^6.4.0",
+    "cordova-browser": "^4.1.0",
+    "cordova-plugin-apprate": "^1.3.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-dialogs": "^1.3.4",
+    "cordova-plugin-globalization": "^1.0.9",
+    "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.2.1",
+    "cordova-plugin-x-toast": "^2.6.0",
+    "cordova-sqlite-storage": "^2.2.0",
+    "es6-promise-plugin": "^4.1.0",
+    "ionic-angular": "^3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "rxjs": "5.4.0",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.12"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.4.5",
+    "@ionic/app-scripts": "^3.1.7",
+    "typescript": "2.3.4"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-x-socialsharing": {},
+      "com.darktalker.cordova.screenshot": {},
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-apprate": {}
     },
-    "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/app-rate": "^4.3.3",
-        "@ionic-native/core": "3.12.1",
-        "@ionic-native/screenshot": "^4.3.3",
-        "@ionic-native/social-sharing": "^4.3.3",
-        "@ionic-native/splash-screen": "3.12.1",
-        "@ionic-native/sqlite": "^4.3.3",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic-native/toast": "^4.3.3",
-        "@ionic/storage": "2.0.1",
-        "@ngx-translate/core": "6.0.1",
-        "@ngx-translate/http-loader": "0.0.3",
-        "com.darktalker.cordova.screenshot": "^0.1.6",
-        "cordova-android": "^6.2.3",
-        "cordova-browser": "^4.1.0",
-        "cordova-plugin-apprate": "^1.3.0",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-dialogs": "^1.3.3",
-        "cordova-plugin-globalization": "^1.0.7",
-        "cordova-plugin-inappbrowser": "^1.7.1",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-plugin-x-socialsharing": "^5.2.0",
-        "cordova-plugin-x-toast": "^2.6.0",
-        "cordova-sqlite-storage": "^2.1.2",
-        "es6-promise-plugin": "^4.1.0",
-        "ionic-angular": "^3.9.2",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "rxjs": "5.4.0",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
-    },
-    "devDependencies": {
-        "@angular/cli": "^1.4.5",
-        "@ionic/app-scripts": "2.1.4",
-        "typescript": "2.3.4"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-x-socialsharing": {},
-            "com.darktalker.cordova.screenshot": {},
-            "cordova-plugin-x-toast": {},
-            "cordova-plugin-apprate": {}
-        },
-        "platforms": [
-            "android",
-            "browser"
-        ]
-    }
+    "platforms": [
+      "android",
+      "browser"
+    ]
+  }
 }
